# MGRCV

./: .gitignore  README.md  TPs.code-workspace  pacs_alb6.cpp  script.bash
AR/: HelloWorld.py  main.fdb_latexmk  main.tex
AR/catkin_ws/: catkin_ws.code-workspace  prueba.cpp  source_path.txt
AR/catkin_ws/old/second_package/: CMakeLists.txt
AR/catkin_ws/src/heuristics4astar/: CMakeLists.txt  INSTALL.txt  README.txt  custom_astar_plugin.xml  heuristics4astar_plugin.xml  package.xml
AR/catkin_ws/src/heuristics4astar/cfg/: Heuristics_GlobalPlanner.cfg
AR/catkin_ws/src/heuristics4astar/cfg/move_base/costmaps/: costmap_common_params.yaml
AR/catkin_ws/src/heuristics4astar/cfg/move_base/planners/: planners_selection.yaml
AR/catkin_ws/src/heuristics4astar/config/: custom_astar.yaml  custom_astar_rviz.rviz
AR/catkin_ws/src/heuristics4astar/config/move_base/planners/: planners_selection.yaml
AR/catkin_ws/src/heuristics4astar/include/heuristics4astar/: custom_astar.h  dijkstra.h  expander.h  gradient_path.h  grid_path.h  orientation_filter.h  planner_core.h  potential_calculator.h  quadratic_calculator.h  traceback.h
AR/catkin_ws/src/heuristics4astar/launch/: heuristics4astar.launch
AR/catkin_ws/src/heuristics4astar/src/: custom_astar.cpp  dijkstra.cpp  gradient_path.cpp  grid_path.cpp  orientation_filter.cpp  plan_node.cpp  planner_core.cpp  quadratic_calculator.cpp
AR/catkin_ws/src/heuristics4astar/world/maze_with_blocks/: maze_corridor.pgm  maze_corridor.world  maze_corridor.yaml  maze_with_blocks.pgm  maze_with_blocks.world  maze_with_blocks.yaml  maze_with_blocks_blank.pgm  maze_with_blocks_blank.world  maze_with_blocks_blank.yaml  maze_with_corridor.pgm  maze_with_corridor.world  maze_with_corridor.yaml
AR/catkin_ws/src/p06_arob_lab2_drones/: CMakeLists.txt  package.xml
AR/catkin_ws/src/p06_arob_lab2_drones/include/lab2_drones/: follow_targets_3d.hpp
AR/catkin_ws/src/p06_arob_lab2_drones/launch/: follow_target.launch
AR/catkin_ws/src/p06_arob_lab2_drones/src/: follow_targets_3d.cpp
AR/catkin_ws/src/pXX_arob_lab2_drones/: CMakeLists.txt  package.xml
AR/catkin_ws/src/pXX_arob_lab2_drones/include/lab2_drones/: follow_targets_3d.hpp
AR/catkin_ws/src/pXX_arob_lab2_drones/launch/: follow_target.launch
AR/catkin_ws/src/pXX_arob_lab2_drones/src/: follow_targets_3d.cpp
AR/catkin_ws/src/second_package/: CMakeLists.txt  package.xml
AR/catkin_ws/src/second_package/src/: helloWorld.cpp
AR/final_assignment/: biblio.bib  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex
ASLAM/Lab1/: open3D_and_redwood.ipynb
CI/Assignment3/: README.md
CI/Assignment4/: README.md  backprojection_attenuation.m  backprojection_confocal.m  backprojection_naive.m  main.asv  main.m
CV/: CV_labs.code-workspace  HelloWorld.py
CV/Colon_assignment/: colmap_preprocess.py  comparison_pnp_approaches.py  comparison_undistort_fish_eye.py  errata_colmap_preprocess.py  image_downsizing.py  manipulate_npz_test.py  result.npy  (+2 more)
FC/: FundamentalLabs.code-workspace  HelloWorld-py
FC/03_Memory_management/: CMakeLists.txt
FC/03_Memory_management/src/: global_local.cpp  max_min_global_2d_matrix.cpp  max_min_heap_2d_matrix.cpp  to_fix_double_delete.cpp  to_fix_missing_new.cpp  variables.cpp  variables_wout_pointers.cpp  write_through_ptr_ref.cpp
FC/04_Smart_pointers/: CMakeLists.txt  CMakePresets.json
FC/04_Smart_pointers/src/: max_min_sp_2d_matrix.cpp  shared_ptr.cpp  to_fix_memory_leaks  to_fix_memory_leaks.cpp
FC/05_Data_structure_and_Classes/: CMakeLists.txt
FC/05_Data_structure_and_Classes/src/rational‐class/: calculator.cpp  rational.cpp  rational.h
FC/05_Data_structure_and_Classes/src/rational‐operators/: calculator.cpp  rational.cpp  rational.h
FC/05_Data_structure_and_Classes/src/rational‐struct/: calculator.cpp  rational.cpp  rational.h
FC/06_Polymorphism_macos_IPB/: CMakeLists.txt  boke.cpp  boke.h  brush.h  brushes.cpp  main.cpp
FC/Imperative_programming/Calculator/: CMakeLists.txt  CMakePresets.json  calculator.cpp
ML/: HelloWorld.py  ML_Lab1.ipynb
MSAP/: HelloWorld.py
PACS/: CMakeLists.txt  HelloWorld.py  Labs_PACS.code-workspace
PACS/Assignment3/: CMakeLists.txt  analysis_parallel.py  analysis_sequential.py  pi_taylor_parallel.cc  pi_taylor_sequential.cc
PACS/Assignment3/data/: pi_taylor_parallel_execution_times.csv  pi_taylor_sequential_execution_times.csv
PACS/Assignment3/notas/: notas.txt
PACS/Assignment3/report/: Lab3.aux  Lab3.fdb_latexmk  Lab3.fls  Lab3.run.xml  Lab3.tex
PACS/Assignment3/results/: pi_taylor_parallel_statistics.csv  pi_taylor_sequential_summary_statistics.csv
PACS/Assignment4/: CMakeLists.txt  performance.py  smallpt_thread_pool.cpp
PACS/Assignment4/include/: thread_pool.hpp  threadsafe_queue.hpp
PACS/Assignment4/report/: lab4.aux  lab4.fdb_latexmk  lab4.fls  lab4.run.xml  lab4.tex
PACS/Assignment4/report/results/: plot.py  results.csv
PACS/Assignment5/: CImg_prueba.cpp  CMakeLists.txt  basic_environ.c  basic_environ_prueba.c  executable  gaussian.cl  gaussian.cpp  sobel.cl  sobel.cpp  sobel_global_local.cpp  sobel_gt.cpp  terminal.txt  test_sobel_image_generator.cpp
PACS/Assignment5/deliverable/: CMakeLists.txt  README.md  basic_environ.c  sobel_gt.cpp  sobel_local.cl
PACS/Assignment5/log/: sobel_debug_data.txt
PACS/Assignment5/log/gt/: 20x20.jpg.txt
PACS/Assignment5/log/results/: dataset.csv  gpu_sobel_1024x1024_dataset.csv  gpu_sobel_2048x4096_dataset.csv  gpu_sobel_256x256_dataset.csv  gpu_sobel_256x512_dataset.csv  gpu_sobel_512x512_dataset.csv  gpu_sobel_720x1280_dataset.csv
PACS/Assignment5/report/: lab5.aux  lab5.fdb_latexmk  lab5.fls  lab5.tex  process_data.py
PACS/Assignment5/report/data/: cpu_sobel_results.csv  gpu_sobel_dataset.csv  processed_cpu.csv  processed_dataset.csv  processed_dataset_mean.csv  processed_dataset_mean_16.csv
PACS/Assignment6/: CMakeLists.txt  commandos.txt
PACS/Assignment6/src/: gpu_filter.cpp  heterogeneus_balanced.cpp  heterogeneus_unbalanced.cpp  image_simulation.cpp  sobel_filter.cl  sobel_global_local.cpp  sober_filter_nonhete.cpp
(+3169 files in other folders)
