<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <!-- <name>global_planner</name>
  <version>1.17.3</version> -->
  <name>heuristics4astar</name>
  <version>0.0.0</version>
  <description>
     A path (global) planner library and node based upon global_planner from navigation stack. Adds
     the feature to use custom heuristics for A* algorithm at runtime.
  </description>
  <maintainer email="david.padilla97@gmail.com">David Padilla Orenga</maintainer>
  <maintainer email="ipastore@unizar.es">Ignacio Pastore Benaim</maintainer>
  <license>BSD</license>

  <author>David Lu!!</author>
  <url>http://wiki.ros.org/global_planner</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>navfn</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>

  <export>
      <!-- <nav_core plugin="${prefix}/bgp_plugin.xml" /> -->
      <nav_core plugin="${prefix}/heuristics4astar_plugin.xml" />
  </export>

</package>
