<?xml version="1.0"?>
<package format="2">
  <name>lab2_drones</name>
  <version>0.0.0</version>
  <description>The lab2_drones package</description>

  <maintainer email="946874@unizar.com">David Padilla</maintainer>
  <maintainer email="920576@unizar.com">Nacho Pastore</maintainer>

  <!--This tag specifies that the package is licensed under the BSD license.-->
  <license>BSD</license>
  <author email="946874@unizar.com">David Padilla</author>
  <author email="920576@unizar.com">Nacho Pastore</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>roslib</build_depend>


  <!-- Dependencies needed after this package is compiled. -->
  <!-- Since we are using package format =2, catkin manifest we must use exec_depend instead of run_depend-->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>roslib</exec_depend>

</package>
