<?xml version="1.0"?>
<package format="2">
  <name>lab2_drones</name>
  <version>0.0.0</version>
  <description>The lab2_drones package</description>

  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>
  <author email="jane.doe@example.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
</package>
